--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="unnamed.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/png" href="%PUBLIC_URL%/unnamed.png" />
+  <meta name=" viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Diabetes_Supplies_INVENTORY_Portal" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
