--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <!-- <meta http-equiv="Content-Security-Policy"
     content="default-src 'self' gap:; script-src * 'unsafe-inline' 'unsafe-eval';" /> -->
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self'; style-src 'self'; style-src-elem 'unsafe-inline' *; font-src 'self'; img-src *; connect-src *; manifest-src 'self';" />
+    content="default-src 'self'; style-src 'self' *; style-src-elem 'unsafe-inline' *; font-src 'self'; img-src *; connect-src *; manifest-src 'self';" />
   <meta name=" viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Diabetes_Supplies_INVENTORY_Portal" />
